# poc

./: .gitignore  README.md  buildHaskell.sh  cabal.project
backend/: visual-fp-backend.cabal
backend/src/: Functions.hs  Model.hs  MyLib.hs  UIModel.hs
backend/src/VFP/Execution/: FunctionExecution.hs
backend/src/VFP/Inference/: Elaboration.hs  Example.hs  InputModel.hs  Unification.hs  Zonking.hs
backend/src/VFP/Translation/: Inference.hs  InferenceTranslation.hs  TranslateInferedToTyped.hs  TranslateToHaskellSource.hs  TranslateUntypedToInput.hs  TreeBuilderInput.hs  TreeBuilderOutput.hs  WellKnown.hs
backend/src/VFP/UI/: Functions.hs  UIModel.hs
backend/test/: BackendComponentTests.hs  IntegrationTests.hs  Tests.hs
backend/test/Inference/: InferenceComponentTests.hs  IntegrationTests.hs  UnificationTests.hs
backend/test/Translation/: InferenceTranslationTest.hs
backend/test/UI/: UIModelTests.hs
compiler-platform/: CHANGELOG.md  README.md  compiler-platform.cabal  package.yaml  stack.yaml
compiler-platform/src/: Lib.hs
desktop-app/: README.md  nodemon.json  package.json  tsconfig.json
desktop-app/electron/: config.ts  main.ts
desktop-app/frontend/: package.json  vite.config.ts
electron-app/: forge.config.js  main.ts  package.json  tsconfig.json
frontend/: visual-fp-frontend.cabal
frontend/app/: Frontend.hs  FunctionEditor.hs  Main.hs
frontend/app/VFP/: Frontend.hs  FunctionEditor.hs
frontend/static/css/: visualFP.css
