cabal-version:      2.4
name:               visual-fp-backend
version:            0.1.0.0
license:            MIT
author:             Lukas Streckeisen & Jann Flepp
copyright:          2023 Lukas Streckeisen & Jann Flepp

library
    exposed-modules:
        VFP.UI.UIModel,
        VFP.UI.Functions
        VFP.Inference.Elaboration,
        VFP.Inference.Example,
        VFP.Inference.InputModel,
        VFP.Inference.Unification,
        VFP.Inference.Zonking
    build-depends:
        base ^>= 4.18,
        containers,
        mtl ^>= 2.3
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite VFP--test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    other-modules:
        Inference.UnificationTests,
        Inference.IntegrationTests
    build-depends:
        base,
        containers,
        visual-fp-backend,
        HUnit ^>= 1.6.2
