cabal-version:      2.4
name:               visual-fp-backend
version:            0.1.0.0
license:            GPL-3.0-only
author:             Lukas Streckeisen & Jann Flepp
copyright:          2023 Lukas Streckeisen & Jann Flepp

library
    exposed-modules:
        VFP.UI.UIModel,
        VFP.Translation.Inference,
        VFP.Translation.TranslateToHaskellSource,
        VFP.Translation.TranslateUntypedToInput,
        VFP.Translation.TranslateInferedToTyped,
        VFP.Translation.WellKnown,
        VFP.Inference.Elaboration,
        VFP.Inference.Example,
        VFP.Inference.InputModel,
        VFP.Inference.Unification,
        VFP.Inference.Zonking,
        VFP.Execution.FunctionExecution
    build-depends:
        base >= 4.18 && < 5,
        containers,
        mtl ^>= 2.3,
        filepath,
        directory,
        process
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options: -Wall

test-suite VFP--test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    other-modules:
        Inference.UnificationTests,
        Inference.InferenceComponentTests,
        IntegrationTests,
        UI.UIModelTests,
        Translation.InferenceTranslationTest
    build-depends:
        base,
        containers,
        visual-fp-backend,
        HUnit ^>= 1.6.2
    ghc-options: -Wall
