cabal-version:      3.0
name:               visual-fp-frontend
version:            0.1.0.0
build-type:         Simple
license:            MIT
author:             Lukas Streckeisen & Jann Flepp
copyright:          2023 Lukas Streckeisen & Jann Flepp

executable visual-fp-frontend
    main-is:            Main.hs
    other-modules:
        Frontend,
        FunctionEditor
    build-depends:
        base ^>=4.18.0.0,
        threepenny-gui >=0.9 && <1,
        visual-fp-backend,
        filepath
    hs-source-dirs:     app
    ghc-options:        -Wall
    default-language:   Haskell2010
